--- a/index.html
+++ b/index.html
@@ -1,16 +1,84 @@
 <!doctype html>
 <html lang="pt-br">
   <head>
+    <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Barbearia LS</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
+    <!-- style css -->
+     <link rel="stylesheet" href="css/style.css">
+
+    <title>Barbearia LS </title>
   </head>
   <body>
-    <h1>Hello, world seja bem vindo Barbearia LS!</h1>
-    <button class="btn btn-default">Clique aqui</button>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>
+      <header>
+        <nav>
+          <div><img src="img/LogoBarbeariaLS.png" alt=""></div>
+          <h1>Cabeçalho da página</h1>
+        </nav>
+      </header>
+
+      <main>
+        <section>
+          <div class="container-fluid p-0">
+            <div class="video-container">
+                <iframe 
+                    src="https://www.youtube.com/embed/I8zF7WSzuiE?autoplay=1&mute=1&loop=1&playlist=I8zF7WSzuiE&controls=0" 
+                    frameborder="0" 
+                    allowfullscreen
+                    allow="autoplay; encrypted-media">
+                </iframe>
+            </div>
+        </div>
+        </section>
+        <section>
+          Nossos serviços(descrição do que a barbearia oferece)
+          <ul>
+            <li>Corte Social</li>
+            <li>Degrade</li>
+            <li>Navalhado</li>
+            <li>Barba</li>
+            <li>Sombrancelhas</li>
+            <li>Pigmentação</li>
+            <li>Design</li>
+          </ul>
+        </section>
+
+        <section>
+          <h3>Nossa unidade (Localização no maps)</h3>
+        </section>
+
+        <section>
+          Nossos clientes(imagens dos melhores cortes)
+        </section>
+
+        <section>
+          <h3>Passou por aqui!</h3>
+          <p>Seção dedicada ao atleta do Atletico paranaense</p>
+        </section>
+
+      </main>
+      <footer>
+        <nav>
+          <h3>Redes sociais no rodapé da página</h3>
+          Proprietário Leonardo Emanoel
+          
+        </nav>
+      </footer>
+
+
+    <!-- Optional JavaScript; choose one of the two! -->
+
+    <!-- Option 1: Bootstrap Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
+    <!-- Option 2: Separate Popper and Bootstrap JS -->
+    <!--
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+    -->
   </body>
 </html>
