--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <!-- favicon -->
+    <link rel="shortcut icon" href="img/favicon_io/android-chrome-512x512.png" type="image/x-icon">
+
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
@@ -15,24 +18,40 @@
   </head>
   <body>
       <header>
-        <nav>
-          <div><img src="img/LogoBarbeariaLS.png" alt=""></div>
-          <h1>Cabeçalho da página</h1>
-        </nav>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+          <div class="container">
+              <!-- Logo -->
+              <a class="navbar-brand" href="#">
+                  <img src="img/LogoBarbeariaLS.png" alt="Logo da barbearia" height="40">
+              </a>
+              <!-- Botão para mobile -->
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+              </button>
+              <!-- Menu -->
+              <div class="collapse navbar-collapse" id="navbarNav">
+                  <ul class="navbar-nav ms-auto">
+                      <li class="nav-item">
+                          <a class="nav-link" href="#home">Início</a>
+                      </li>
+                      <li class="nav-item">
+                          <a class="nav-link" href="#sobre">Sobre</a>
+                      </li>
+                      <li class="nav-item">
+                          <a class="nav-link" href="#contato">Contato</a>
+                      </li>
+                  </ul>
+              </div>
+          </div>
+      </nav>
+  
       </header>
 
       <main>
         <section>
-          <div class="container-fluid p-0">
-            <div class="video-container">
-                <iframe 
-                    src="https://www.youtube.com/embed/I8zF7WSzuiE?autoplay=1&mute=1&loop=1&playlist=I8zF7WSzuiE&controls=0" 
-                    frameborder="0" 
-                    allowfullscreen
-                    allow="autoplay; encrypted-media">
-                </iframe>
-            </div>
-        </div>
+          <div>
+            Carrossel de imagens
+          </div>
         </section>
         <section>
           Nossos serviços(descrição do que a barbearia oferece)
