--- a/index.html
+++ b/index.html
@@ -1,108 +1,95 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Barbearia LS</title>
-  <link href="https://stackpath.bootstrapcdn.com/bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet">
-  <link href="css/style.css" rel="stylesheet">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Barbearia LS</title>
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
 </head>
-
 <body>
-  <!-- Cabeçalho -->
-  <header class="header d-flex justify-content-between align-items-center container">
-    <img src="img/LogoBarbeariaLS.png" alt="Logo da Barbearia LS" class="logo">
-    <nav>
-      <a class="nav-link" href="#home">Home</a>
-      <a class="nav-link" href="#services">Serviços</a>
-      <a class="nav-link" href="#address">Endereço</a>
-      <a class="nav-link" href="#clients">Clientes</a>
-      <a class="nav-link" href="#contact">Contatos</a>
-    </nav>
-  </header>
+    <!-- Cabeçalho -->
+    <header class="header d-flex justify-content-between align-items-center container">
+        <img src="img/LogoBarbeariaLS.png" alt="Logo da Barbearia LS" class="logo">
+        <nav>
+            <a class="nav-link" href="#home">Home</a>
+            <a class="nav-link" href="#services">Serviços</a>
+            <a class="nav-link" href="#address">Endereço</a>
+            <a class="nav-link" href="#clients">Clientes</a>
+            <a class="nav-link" href="#contact">Contatos</a>
+        </nav>
+    </header>
 
-  <!-- Capa -->
-  <div>
-
-    <section>
-
-      <div>
-        <a href="img/capa.png"></a>
-      </div>
+    <!-- Capa -->
+    <section class="cover-section">
+        <img src="img/capa.png" class="cover-img" alt="Capa">
     </section>
 
     <!-- Nossos Serviços -->
     <section id="services" class="container mt-5">
-      <h2 class="text-center">Nossos Serviços</h2>
-      <div class="services">
-        <div class="service-box">Corte Social</div>
-        <div class="service-box">Corte Degrade</div>
-        <div class="service-box">Corte Navalhado</div>
-        <div class="service-box">Corte + Barba</div>
-        <div class="service-box">Sombrancelhas</div>
-        <div class="service-box">Design</div>
-      </div>
+        <h2 class="text-center">Nossos Serviços</h2>
+        <div class="services">
+            <div class="service-box">Corte Social</div>
+            <div class="service-box">Corte Degrade</div>
+            <div class="service-box">Corte Navalhado</div>
+            <div class="service-box">Corte + Barba</div>
+            <div class="service-box">Sombrancelhas</div>
+            <div class="service-box">Design</div>
+        </div>
     </section>
 
     <!-- Endereço -->
     <section id="address" class="container mt-5">
-      <h2 class="text-center">Nosso Endereço</h2>
-      <div class="map-container">
-        <iframe
-          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d240.15364528421216!2d-56.09207513311464!3d-15.620563659833644!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x939dae1fff5ee463%3A0x95207cbd98d30ed7!2sR.%20Pres.%20Leite%20Figueiredo%2C%20598%20-%20Dom%20Aquino%2C%20Cuiab%C3%A1%20-%20MT%2C%2078015-025!5e0!3m2!1spt-BR!2sbr!4v1726111680586!5m2!1spt-BR!2sbr"
-          width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-      </div>
+        <h2 class="text-center">Nosso Endereço</h2>
+        <div class="map-container">
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d240.15364528421216!2d-56.09207513311464!3d-15.620563659833644!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x939dae1fff5ee463%3A0x95207cbd98d30ed7!2sR.%20Pres.%20Leite%20Figueiredo%2C%20598%20-%20Dom%20Aquino%2C%20Cuiab%C3%A1%20-%20MT%2C%2078015-025!5e0!3m2!1spt-BR!2sbr!4v1726111680586!5m2!1spt-BR!2sbr"
+                width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        </div>
     </section>
 
     <!-- Clientes -->
     <section id="clients" class="container mt-5">
-      <h2 class="text-center">Nossos Clientes</h2>
-      <div id="clientCarousel" class="carousel slide">
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="img/CorteDegradeComLuzes2.png" class="d-block w-100" alt="Cliente 1">
-          </div>
-          <div class="carousel-item">
-            <img src="img/CorteDegradeComLuzes.png" class="d-block w-100" alt="Cliente 2">
-          </div>
-          <div class="carousel-item">
-            <img src="img/CorteDegradeAmoicanoComLuzes.png" class="d-block w-100" alt="Cliente 3">
-          </div>
-          <div class="carousel-item">
-            <img src="img/CorteDegrade.png" class="d-block w-100" alt="Cliente 4">
-          </div>
+        <h2 class="text-center">Nossos Clientes</h2>
+        <div class="client-gallery">
+            <div class="client-img">
+                <img src="img/CorteDegradeComLuzes2.png" alt="Cliente 1">
+                <p>Descrição breve do cliente 1.</p>
+            </div>
+            <div class="client-img">
+                <img src="img/CorteDegradeComLuzes.png" alt="Cliente 2">
+                <p>Descrição breve do cliente 2.</p>
+            </div>
+            <div class="client-img">
+                <img src="img/CorteDegradeAmoicanoComLuzes.png" alt="Cliente 3">
+                <p>Descrição breve do cliente 3.</p>
+            </div>
+            <div class="client-img">
+                <img src="img/CorteDegrade.png" alt="Cliente 4">
+                <p>Descrição breve do cliente 4.</p>
+            </div>
         </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#clientCarousel" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Anterior</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#clientCarousel" data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Próximo</span>
-        </button>
-      </div>
     </section>
 
     <!-- Seção Especial -->
     <section id="special" class="container mt-5">
-      <h2 class="text-center">Homenagem Especial</h2>
-      <p class="text-center">Em homenagem ao jogador do Atlético Paranaense que tivemos a honra de atender na Barbearia.
-      </p>
+        <h2 class="text-center">Homenagem Especial</h2>
+        <p class="text-center">Em homenagem ao jogador do Atlético Paranaense que tivemos a honra de atender na Barbearia.</p>
+        <div class="special-gallery">
+            <img src="img/RomuloCardoso.png" class="img-fluid" alt="Homenagem 1">
+            <img src="img/RomuloCardosoCorte.png" class="img-fluid" alt="Homenagem 2">
+        </div>
     </section>
-    <img src="img/RomuloCardoso.png" class="img-fluid" alt="Homenagem">
-    <img src="img/RomuloCardosoCorte.png" class="img-fluid" alt="Homenagem">
-  </div>
 
-  <!-- Footer -->
-  <footer class="footer">
-    <p>Barbearia LS &copy; 2024</p>
-    <a href="https://www.instagram.com/barbeariia_ls/" target="_blank">Instagram</a> |
-    <a href="https://api.whatsapp.com/send?phone=5565992920478&text=Ol%C3%A1%2C%20estou%20vindo%20atrav%C3%A9s%20do%20seu%20site!!!"
-      target="_blank">WhatsApp</a>
-  </footer>
+    <!-- Footer -->
+    <footer class="footer">
+        <p>Barbearia LS &copy; 2024</p>
+        <div class="footer-links">
+            <a href="https://www.instagram.com/barbeariia_ls/" target="_blank">Instagram</a> |
+            <a href="https://api.whatsapp.com/send?phone=5565992920478&text=Ol%C3%A1%2C%20estou%20vindo%20atrav%C3%A9s%20do%20seu%20site!!!" target="_blank">WhatsApp</a>
+        </div>
+    </footer>
 
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
 </body>
-
 </html>
