--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <a class="nav-link" href="#services">Serviços</a>
             <a class="nav-link" href="#address">Endereço</a>
             <a class="nav-link" href="#clients">Clientes</a>
-            <a class="nav-link" href="#contact">Contatos</a>
+            <a class="nav-link" href="https://api.whatsapp.com/send?phone=5565992920478&text=Ol%C3%A1%2C%20estou%20vindo%20atrav%C3%A9s%20do%20seu%20site!!!" target="_blank">Contatos</a>
         </nav>
     </header>
 
@@ -45,6 +45,7 @@
             <iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d240.15364528421216!2d-56.09207513311464!3d-15.620563659833644!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x939dae1fff5ee463%3A0x95207cbd98d30ed7!2sR.%20Pres.%20Leite%20Figueiredo%2C%20598%20-%20Dom%20Aquino%2C%20Cuiab%C3%A1%20-%20MT%2C%2078015-025!5e0!3m2!1spt-BR!2sbr!4v1726111680586!5m2!1spt-BR!2sbr"
                 width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+            <p class="address-text">R. Pres. Leite Figueiredo, 598 - Dom Aquino, Cuiabá - MT, 78015-025</p>
         </div>
     </section>
 
@@ -74,7 +75,11 @@
     <!-- Seção Especial -->
     <section id="special" class="container mt-5">
         <h2 class="text-center">Homenagem Especial</h2>
-        <p class="text-center">Em homenagem ao jogador do Atlético Paranaense que tivemos a honra de atender na Barbearia.</p>
+        <p class="text-center">É com grande satisfação que agradecemos ao atleta Romulo Cardoso, do Atlético Paranaense, por confiar em nossos serviços para realizar seu corte de cabelo. Foi uma honra ter a oportunidade de contribuir para o visual de um profissional tão dedicado e talentoso.
+
+          Na Barbearia LS, buscamos sempre proporcionar experiências únicas e resultados excepcionais aos nossos clientes. Obrigado, Romulo, por escolher nossa barbearia para cuidar do seu estilo. Estamos orgulhosos em fazer parte da sua trajetória.
+          
+          Esperamos recebê-lo novamente em breve para mais um corte impecável!</p>
         <div class="special-gallery">
             <img src="img/RomuloCardoso.png" class="img-fluid" alt="Homenagem 1">
             <img src="img/RomuloCardosoCorte.png" class="img-fluid" alt="Homenagem 2">
