--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
  <header class="header d-flex justify-content-between align-items-center container">
   <img src="img/LogoBarbeariaLS.png" alt="Logo da Barbearia LS" class="logo">
   <nav>
-    <a class="nav-link" href="#home">Home</a>
+    <a class="nav-link" href="#capa">Home</a>
     <a class="nav-link" href="#services">Serviços</a>
     <a class="nav-link" href="#address">Endereço</a>
     <a class="nav-link" href="#clients">Clientes</a>
-    <a class="nav-linkk" href="https://api.whatsapp.com/send?phone=5565992920478&text=Ol%C3%A1%2C%20estou%20vindo%20atrav%C3%A9s%20do%20seu%20site!!!"
-   target="_blank" rel="noopener noreferrer">WhatsApp</a>
+    <a class="nav-linkk" href="https://api.whatsapp.com/send?phone=5565992920478&text=Ol%C3%A1%2C%20estou%20vindo%20atrav%C3%A9s%20do%20seu%20site!!!" target="_blank" rel="noopener noreferrer">WhatsApp</a>
+
 
 </nav>
 
@@ -30,7 +30,7 @@
 </header>
 
   <!-- Capa -->
-  <section class="cover-section">
+  <section id="capa" class="cover-section">
     <img src="img/capa.png" class="cover-img" alt="Capa">
   </section>
 
