--- a/index.html
+++ b/index.html
@@ -7,34 +7,42 @@
   <meta name="description"
     content="Barbearia LS - Especializada em cortes de cabelo masculino. Venha conhecer nossos serviços e clientes satisfeitos.">
   <meta name="keywords" content="barbearia, cortes de cabelo, masculino, Cuiabá, Romulo Cardoso, Atlético Paranaense">
-  <title>NAV Barbearia LS</title>
+  <title> Barbearia LS</title>
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
+  <!--favicon_io-->
+  <link rel="apple-touch-icon" sizes="180x180" href="img/favicon_io/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="img/favicon_io/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="img/favicon_io/favicon-32x32.png">
+  <link rel="manifest" href="/site.webmanifest">
+
 </head>
 
 <body>
- <!-- Cabeçalho -->
- <header class="header d-flex justify-content-between align-items-center container">
-  <div class="row">
+  <!-- Cabeçalho -->
+  <header class="header d-flex justify-content-between align-items-center container">
+    <div class="row">
       <div class="col-md-4">
-          <img src="img/LogoBarbeariaLS.png" alt="Logo da Barbearia LS" class="logo ">
+        <img src="img/LogoBarbeariaLS.png" alt="Logo da Barbearia LS" class="logo ">
 
       </div>
       <div class="col-md-8">
 
-          <nav>
-              <a class="nav-link" href="#capa">Home</a>
-              <a class="nav-linkk" href="https://api.whatsapp.com/send?phone=5565992920478&text=Ol%C3%A1%2C%20estou%20vindo%20atrav%C3%A9s%20do%20seu%20site!!!" target="_blank" rel="noopener noreferrer">WhatsApp</a>
-              <a class="nav-link" href="#services">Serviços</a>
-              <a class="nav-link" href="#address">Endereço</a>
-              <a class="nav-link" href="#clients">Clientes</a>
-              
-            </nav>
-        </div>
+        <nav>
+          <a class="nav-link" href="#capa">Home</a>
+          <a class="nav-linkk"
+            href="https://api.whatsapp.com/send?phone=5565992920478&text=Ol%C3%A1%2C%20estou%20vindo%20atrav%C3%A9s%20do%20seu%20site!!!"
+            target="_blank" rel="noopener noreferrer">WhatsApp</a>
+          <a class="nav-link" href="#services">Serviços</a>
+          <a class="nav-link" href="#address">Endereço</a>
+          <a class="nav-link" href="#clients">Clientes</a>
+
+        </nav>
+      </div>
     </div>
 
 
-</header>
+  </header>
 
   <!-- Capa -->
   <section id="capa" class="cover-section">
@@ -90,16 +98,18 @@
 
   <!-- Seção Especial -->
   <section id="special" class="container mt-5">
-    <h2 class="text-center">Homenagem Especial</h2>
-    <p class="text-center">É com grande satisfação que agradecemos ao atleta Romulo Cardoso, do Atlético Paranaense, por
+    <h2 class="text-center">Passou por aqui</h2>
+    <p class="text-center">É com grande satisfação que agradecemos aos atletas Vitor Bueno e Romulo Cardoso, por
       confiar em nossos serviços para realizar seu corte de cabelo. Foi uma honra ter a oportunidade de contribuir para
-      o visual de um profissional tão dedicado e talentoso.</p>
+      o visual de profissionais dedicado e talentosos.</p>
     <p class="text-center">Na Barbearia LS, buscamos sempre proporcionar experiências únicas e resultados excepcionais
-      aos nossos clientes. Obrigado, Romulo, por escolher nossa barbearia para cuidar do seu estilo. Estamos orgulhosos
-      em fazer parte da sua trajetória. Esperamos recebê-lo novamente em breve para mais um corte impecável!</p>
+      aos nossos clientes. Obrigado, Vitor Bueno e Romulo, por escolher nossa barbearia para cuidar do seu estilo. Estamos orgulhosos
+      em fazer parte da sua trajetória.</p>
+      <p class="text-center"> Esperamos recebê-lo novamente em breve para mais um corte impecável!</p>
     <div class="special-gallery d-flex justify-content-center">
-      <img src="img/RomuloCardoso.png" class="img-fluid" alt="Homenagem 1">
-      <img src="img/RomuloCardosoCorte.png" class="img-fluid" alt="Homenagem 2">
+      <img src="img/VitorBueno.png" class="img-fluid" alt="Vitor Frezarin Bueno é um futebolista brasileiro que atua como meio-campista. Atualmente joga no Cerezo Osaka.">
+      
+      <img src="img/RomuloCardoso.png" class="img-fluid" alt="Rômulo José Cardoso da Cruz, mais conhecido apenas como Rômulo, é um futebolista brasileiro que atua como atacante. Atualmente, joga pelo Göztepe.">
     </div>
   </section>
 
