Adição de cortes e novas imagens

--- a/index.html
+++ b/index.html
@@ -78,20 +78,20 @@
     <h2 class="text-center">Nossos Clientes</h2>
     <div class="client-gallery d-flex justify-content-center flex-wrap">
       <div class="client-img text-center">
-        <img src="img/CorteDegradeComLuzes2.png" alt="Cliente 1">
-        <p>Descrição breve do cliente 1.</p>
+        <img src="img/KidsCorte.jpeg" alt="Cliente 1">
+        <p>Transforme o visual do seu pequeno com um corte divertido e moderno.</p>
       </div>
       <div class="client-img text-center">
-        <img src="img/CorteDegradeComLuzes.png" alt="Cliente 2">
-        <p>Descrição breve do cliente 2.</p>
+        <img src="img/ReflexoAlinhado.jpeg" alt="Cliente 2">
+        <p>O corte reflexo alinhado oferece um visual sofisticado e elegante, com um acabamento preciso e harmonioso.</p>
       </div>
       <div class="client-img text-center">
-        <img src="img/CorteDegradeAmoicanoComLuzes.png" alt="Cliente 3">
-        <p>Descrição breve do cliente 3.</p>
+        <img src="img/Regua.png" alt="Cliente 3">
+        <p>O corte na régua com risquinho oferece um estilo preciso e moderno, com linhas nítidas e um toque de sofisticação.</p>
       </div>
       <div class="client-img text-center">
         <img src="img/CorteDegrade.png" alt="Cliente 4">
-        <p>Descrição breve do cliente 4.</p>
+        <p>O corte degrade proporciona um visual moderno com uma transição suave e gradual, ideal para um estilo elegante e versátil.</p>
       </div>
     </div>
   </section>
@@ -116,6 +116,7 @@
   <!-- Footer -->
   <footer class="footer container mt-5">
     <p class="text-center">Barbearia LS &copy; 2024</p>
+    <br>
     <div class="footer-links text-center">
       <a href="https://www.instagram.com/barbeariia_ls/" target="_blank">Instagram</a> |
       <a href="https://api.whatsapp.com/send?phone=5565992920478&text=Ol%C3%A1%2C%20estou%20vindo%20atrav%C3%A9s%20do%20seu%20site!!!"
