--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <title> Barbearia LS</title>
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
+
   <!--favicon_io-->
   <link rel="apple-touch-icon" sizes="180x180" href="img/favicon_io/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="img/favicon_io/favicon-32x32.png">
@@ -23,7 +24,7 @@
   <header class="header d-flex justify-content-between align-items-center container">
     <div class="row">
       <div class="col-md-4">
-        <img src="img/LogoBarbeariaLS.png" alt="Logo da Barbearia LS" class="logo ">
+        <img src="img/Logotipo_Barbearia_Retrô_Preto_Branco.png" alt="Logo da Barbearia LS" class="logo ">
 
       </div>
       <div class="col-md-8">
@@ -36,11 +37,9 @@
           <a class="nav-link" href="#services">Serviços</a>
           <a class="nav-link" href="#address">Endereço</a>
           <a class="nav-link" href="#clients">Clientes</a>
-
         </nav>
       </div>
     </div>
-
 
   </header>
 
@@ -83,33 +82,39 @@
       </div>
       <div class="client-img text-center">
         <img src="img/ReflexoAlinhado.jpeg" alt="Cliente 2">
-        <p>O corte reflexo alinhado oferece um visual sofisticado e elegante, com um acabamento preciso e harmonioso.</p>
+        <p>O corte reflexo alinhado oferece um visual sofisticado e elegante, com um acabamento preciso e harmonioso.
+        </p>
       </div>
       <div class="client-img text-center">
         <img src="img/Regua.png" alt="Cliente 3">
-        <p>O corte na régua com risquinho oferece um estilo preciso e moderno, com linhas nítidas e um toque de sofisticação.</p>
+        <p>O corte na régua com risquinho oferece um estilo preciso e moderno, com linhas nítidas e um toque de
+          sofisticação.</p>
       </div>
       <div class="client-img text-center">
         <img src="img/CorteDegrade.png" alt="Cliente 4">
-        <p>O corte degrade proporciona um visual moderno com uma transição suave e gradual, ideal para um estilo elegante e versátil.</p>
+        <p>O corte degrade proporciona um visual moderno com uma transição suave e gradual, ideal para um estilo
+          elegante e versátil.</p>
       </div>
     </div>
   </section>
 
   <!-- Seção Especial -->
   <section id="special" class="container mt-5">
-    <h2 class="text-center">Passou por aqui</h2>
+    <h2 class="text-center">Homenagem Especial!!!</h2>
     <p class="text-center">É com grande satisfação que agradecemos aos atletas Vitor Bueno e Romulo Cardoso, por
       confiar em nossos serviços para realizar seu corte de cabelo. Foi uma honra ter a oportunidade de contribuir para
       o visual de profissionais dedicado e talentosos.</p>
     <p class="text-center">Na Barbearia LS, buscamos sempre proporcionar experiências únicas e resultados excepcionais
-      aos nossos clientes. Obrigado, Vitor Bueno e Romulo, por escolher nossa barbearia para cuidar do seu estilo. Estamos orgulhosos
+      aos nossos clientes. Obrigado, Vitor Bueno e Romulo, por escolher nossa barbearia para cuidar do seu estilo.
+      Estamos orgulhosos
       em fazer parte da sua trajetória.</p>
-      <p class="text-center"> Esperamos recebê-lo novamente em breve para mais um corte impecável!</p>
+    <p class="text-center"> Esperamos recebê-lo novamente em breve para mais um corte impecável!</p>
     <div class="special-gallery d-flex justify-content-center">
-      <img src="img/VitorBueno.png" class="img-fluid" alt="Vitor Frezarin Bueno é um futebolista brasileiro que atua como meio-campista. Atualmente joga no Cerezo Osaka.">
-      
-      <img src="img/RomuloCardoso.png" class="img-fluid" alt="Rômulo José Cardoso da Cruz, mais conhecido apenas como Rômulo, é um futebolista brasileiro que atua como atacante. Atualmente, joga pelo Göztepe.">
+      <img src="img/VitorBueno.png" class="img-fluid"
+        alt="Vitor Frezarin Bueno é um futebolista brasileiro que atua como meio-campista. Atualmente joga no Cerezo Osaka.">
+
+      <img src="img/RomuloCardoso.png" class="img-fluid"
+        alt="Rômulo José Cardoso da Cruz, mais conhecido apenas como Rômulo, é um futebolista brasileiro que atua como atacante. Atualmente, joga pelo Göztepe.">
     </div>
   </section>
 
