--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
   <!-- Seção Especial -->
   <section id="special" class="container mt-5">
-    <h2 class="text-center">Homenagem Especial!!!</h2>
+    <h2 class="text-center">Homenagem Especial</h2>
     <p class="text-center">É com grande satisfação que agradecemos aos atletas Vitor Bueno e Romulo Cardoso, por
       confiar em nossos serviços para realizar seu corte de cabelo. Foi uma honra ter a oportunidade de contribuir para
       o visual de profissionais dedicado e talentosos.</p>
