--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description"
-    content="Barbearia LS - Especializada em cortes de cabelo masculino. Venha conhecer nossos serviços e clientes satisfeitos.">
-  <meta name="keywords" content="barbearia, cortes de cabelo, masculino, Cuiabá, Romulo Cardoso, Atlético Paranaense">
+  <meta name="description" content="Barbearia LS em Cuiabá oferece cortes de cabelo masculino com alta qualidade e estilo. Conheça nossos serviços especializados e veja a satisfação dos nossos clientes.">
+<meta name="keywords" content="barbearia Cuiabá, cortes de cabelo masculino, estilo de cabelo, grooming, cuidados com o cabelo, barbearia de qualidade, serviços de barbearia, cortes modernos, cuidado com a aparência">
+
   <title> Barbearia LS</title>
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
@@ -30,13 +30,13 @@
       <div class="col-md-8">
 
         <nav>
-          <a class="nav-link" href="#capa">Home</a>
+          <a class="nav-link" href="#capa">HOME</a>
           <a class="nav-linkk"
             href="https://api.whatsapp.com/send?phone=5565992920478&text=Ol%C3%A1%2C%20estou%20vindo%20atrav%C3%A9s%20do%20seu%20site!!!"
-            target="_blank" rel="noopener noreferrer">WhatsApp</a>
-          <a class="nav-link" href="#services">Serviços</a>
-          <a class="nav-link" href="#address">Endereço</a>
-          <a class="nav-link" href="#clients">Clientes</a>
+            target="_blank" rel="noopener noreferrer">WHATSAPP</a>
+          <a class="nav-link" href="#services">SERVIÇOS</a>
+          <a class="nav-link" href="#address">LOCALIZAÇÃO</a>
+          <a class="nav-link" href="#clients">CLIENTES</a>
         </nav>
       </div>
     </div>
@@ -63,7 +63,7 @@
 
   <!-- Endereço -->
   <section id="address" class="container mt-5">
-    <h2 class="text-center">Nosso Endereço</h2>
+    <h2 class="text-center">Nossa Localização</h2>
     <div class="map-container">
       <iframe
         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d240.15364528421216!2d-56.09207513311464!3d-15.620563659833644!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x939dae1fff5ee463%3A0x95207cbd98d30ed7!2sR.%20Pres.%20Leite%20Figueiredo%2C%20598%20-%20Dom%20Aquino%2C%20Cuiab%C3%A1%20-%20MT%2C%2078015-025!5e0!3m2!1spt-BR!2sbr!4v1726111680586!5m2!1spt-BR!2sbr"
